// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Result /> renders conventionnal indemnite with warning toast 1`] = `
.c3 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c19 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c4 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c11 {
  margin-bottom: 1.6rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c16 {
  width: calc(50% * 1);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c8 {
  width: calc(50% * 0.9100320789890648);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c9 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c10 {
  margin-top: 2rem;
}

.c12 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c13 {
  list-style-type: disc;
}

.c14 {
  font-size: 1.4rem;
}

.c15 {
  margin: 1.6rem 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

.c18 {
  margin: 2rem 0;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c4 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c7 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c16 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c8 {
    width: calc(100% * 0.9100320789890648);
  }
}

@media (max-width:980px) {
  .c9 {
    width: 100%;
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c9 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Indemnité de licenciement
    </h2>
  </header>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à
     
    <strong
      class="c4"
    >
      17,444.44
       € brut
    </strong>
  </p>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Détails
    </h2>
  </header>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c5"
  >
    <div>
      <div
        class="c6"
      >
        Votre indemnite légale
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        />
        <span
          class="c9"
        >
          15,875.00
           € brut
        </span>
      </div>
      <details
        class="c10"
      >
        <summary
          class="c11"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c12"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c13"
        >
          <li
            class="c14"
          >
            Salaire de réference (Sref)
             : 
            4500
          </li>
          <li
            class="c14"
          >
            Licenciement pour inaptitude
             : 
            non
          </li>
          <li
            class="c14"
          >
            Ancienneté totale (A)
             : 
            13.08
          </li>
          <li
            class="c14"
          >
            Ancienneté au delà de 10ans (A2)
             : 
            3.08
          </li>
        </ul>
        <strong
          class="c12"
        >
          Formule :
        </strong>
        <div
          class="c15"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`(1/4 * Sref * 10) + (1/3 * Sref * "A2")\`
            </div>
          </div>
        </div>
      </details>
      <p>
        Source :
         
        <a
          href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000035644154&cidTexte=LEGITEXT000006072050&dateTexte=20170924"
          rel="nofollow noopener"
          title="voir l'article L.1234-9 du code du travail sur légifrance"
        >
          Article L.1234-9 du code du travail
        </a>
        ,
        <a
          href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000018537572&cidTexte=LEGITEXT000006072050&dateTexte=20170927"
          rel="nofollow noopener"
          title="voir les articles R1234-1 à R1234-4 du code du travail sur légifrance"
        >
          Article R1234-1 à R1234-4 du code du travail
        </a>
      </p>
    </div>
    <div>
      <div
        class="c6"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c7"
      >
        <div
          class="c16"
        />
        <span
          class="c9"
        >
          17,444.44
           € brut
        </span>
      </div>
      <details
        class="c10"
      >
        <summary
          class="c11"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c12"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c13"
        >
          <li
            class="c14"
          >
            Salaire de référence (Sref)
             : 
            4000
          </li>
          <li
            class="c14"
          >
            Coefficient d'indemnité conventionnel (C)
             : 
            0.33
          </li>
          <li
            class="c14"
          >
            Ancienneté conventionnelle (A)
             : 
            13.08
          </li>
        </ul>
        <strong
          class="c12"
        >
          Formule :
        </strong>
        <div
          class="c15"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`(C * Sref * A)\`
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <div
    class="c17 c18"
  >
    <div
      class="c19"
      role="alert"
    >
      Si un emploi équivalent a été trouvé
      <ul>
        <li>
          par l’employeur
        </li>
        <li>
          dans une autre entreprise
        </li>
        <li>
          avant la fin du préavis
        </li>
        <li>
          et que le salarié l’accepte
        </li>
      </ul>
      Alors l’indemnité de licenciement conventionnelle est réduite d’un tiers et passe donc à
       
      <strong
        class="c4"
      >
        11629.62
         €
      </strong>
      <br />
      Attention, ce tiers (
      5814.81
       €) est dû si la période d’essai dans ce nouvel emploi reste sans suite.
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;

exports[`<Result /> renders legal indemnite 1`] = `
.c3 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c4 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c11 {
  margin-bottom: 1.6rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c8 {
  width: calc(50% * 1);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c16 {
  width: calc(50% * 0.5494311811023621);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c9 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c10 {
  margin-top: 2rem;
}

.c12 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c13 {
  list-style-type: disc;
}

.c14 {
  font-size: 1.4rem;
}

.c15 {
  margin: 1.6rem 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c4 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c7 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c8 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c16 {
    width: calc(100% * 0.5494311811023621);
  }
}

@media (max-width:980px) {
  .c9 {
    width: 100%;
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c9 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Indemnité de licenciement
    </h2>
  </header>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à
     
    <strong
      class="c4"
    >
      15,875.00
       € brut
    </strong>
  </p>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Détails
    </h2>
  </header>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c5"
  >
    <div>
      <div
        class="c6"
      >
        Votre indemnite légale
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        />
        <span
          class="c9"
        >
          15,875.00
           € brut
        </span>
      </div>
      <details
        class="c10"
      >
        <summary
          class="c11"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c12"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c13"
        >
          <li
            class="c14"
          >
            Salaire de réference (Sref)
             : 
            4500
          </li>
          <li
            class="c14"
          >
            Licenciement pour inaptitude
             : 
            non
          </li>
          <li
            class="c14"
          >
            Ancienneté totale (A)
             : 
            13.08
          </li>
          <li
            class="c14"
          >
            Ancienneté au delà de 10ans (A2)
             : 
            3.08
          </li>
        </ul>
        <strong
          class="c12"
        >
          Formule :
        </strong>
        <div
          class="c15"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`(1/4 * Sref * 10) + (1/3 * Sref * "A2")\`
            </div>
          </div>
        </div>
      </details>
      <p>
        Source :
         
        <a
          href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000035644154&cidTexte=LEGITEXT000006072050&dateTexte=20170924"
          rel="nofollow noopener"
          title="voir l'article L.1234-9 du code du travail sur légifrance"
        >
          Article L.1234-9 du code du travail
        </a>
        ,
        <a
          href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000018537572&cidTexte=LEGITEXT000006072050&dateTexte=20170927"
          rel="nofollow noopener"
          title="voir les articles R1234-1 à R1234-4 du code du travail sur légifrance"
        >
          Article R1234-1 à R1234-4 du code du travail
        </a>
      </p>
    </div>
    <div>
      <div
        class="c6"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c7"
      >
        <div
          class="c16"
        />
        <span
          class="c9"
        >
          8,722.22
           € brut
        </span>
      </div>
      <details
        class="c10"
      >
        <summary
          class="c11"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c12"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c13"
        >
          <li
            class="c14"
          >
            Salaire de référence (Sref)
             : 
            2000
          </li>
          <li
            class="c14"
          >
            Coefficient d'indemnité conventionnel (C)
             : 
            0.33
          </li>
          <li
            class="c14"
          >
            Ancienneté conventionnelle (A)
             : 
            13.08
          </li>
        </ul>
        <strong
          class="c12"
        >
          Formule :
        </strong>
        <div
          class="c15"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`(C * Sref * A)\`
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;
